
nobase_dist_pkgdata_DATA = ThinFilm/thin_film.mos Pinup/pinup.mos \
	Pinup/pinup_frontmetal.png Pinup/pinup_contactfoil_vn.png \
	Pinup/pinup_foilisolation.png Pinup/pinup_contactfoil_vp.png \
	Pinup/README Pinup/pinup_back2contactfoil.png Pinup/pinup_vias.png \
	Pinup/generate_mesh.m Pinup/pinup_backisolation.png CSiSTD/graffiti.dat \
	CSiSTD/CSiStd.mos
